WIP 重构 Condition 以及相关全部逻辑